--- a/BleWinrtDll/BleWinrtDll.vcxproj
+++ b/BleWinrtDll/BleWinrtDll.vcxproj
@@ -153,6 +153,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="BleWinrtDll.h" />
+    <ClInclude Include="BleTypes.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
