--- a/BleWinrtDll/BleWinrtDll.vcxproj.filters
+++ b/BleWinrtDll/BleWinrtDll.vcxproj.filters
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="Quelldateien">
@@ -22,6 +22,9 @@
       <Filter>Headerdateien</Filter>
     </ClInclude>
     <ClInclude Include="BleWinrtDll.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="BleTypes.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
     <ClInclude Include="resource.h">
